--- a/Ringbuffer/CMakeLists.txt
+++ b/Ringbuffer/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.22)
 
-# add_subdirectory(RingbufferBasic)
+add_subdirectory(RingbufferBasic)
 add_subdirectory(RingbufferGeneric)
