--- a/LearningGoogleTest/CMakeLists.txt
+++ b/LearningGoogleTest/CMakeLists.txt
@@ -11,5 +11,6 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 enable_testing()
 
 add_subdirectory(googletest)
-add_subdirectory(Ringbuffer)
-add_subdirectory(Communication)
+# add_subdirectory(Ringbuffer)
+# add_subdirectory(Communication)
+add_subdirectory(LowBatteryAlarm)
